fix: make Records todo buttons round on Safari

--- a/scss/records.scss
+++ b/scss/records.scss
@@ -473,6 +473,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        padding: 0;
 
         svg{
             path{
@@ -739,6 +740,7 @@
         {
             font-size: inherit;
             color: inherit;
+            white-space: nowrap;
 
             &:before{
                 display: none;
@@ -755,16 +757,13 @@
             font-size: inherit;
             font-weight: inherit;
         }
+
         &_products{
             text-align: center;
             vertical-align: middle;
         }
 
         /* Bits and bobs inside the <td>s */
-        &_productsButton{
-            width: 100%;
-        }
-
         &_companyName{
             max-width: 8rem;
         }
